Fix overflow on preset list

--- a/ocradmin/static/css/preset_manager.css
+++ b/ocradmin/static/css/preset_manager.css
@@ -46,4 +46,6 @@
     height: 18px;
     cursor: pointer;
     border-top: 1px solid #DDD;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }    
